...
    <string name="song_deleted_text">Song deleted</string>
    <string name="undo_text">Undo</string>
    <string name="undo_successfull_text">Undo successful</string>
    <string name="Deezer_Song">Deezer Song</string>
    <string name="app_name">FinalProjectAndroid</string>
    <string name="save">ave</string>
    <string name="help">Help</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="dictionary">Dictionary</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="toolbar_title">Recipe Explore</string>
    <string name="search">Search</string>
...
    <string name="delete_yes">Yes</string>
    <string name="save_recipe">Recipe Saved!</string>
    <string name="latitude_">Latitude:</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="longitude_">Longitude:</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="lookup">Lookup</string>
    <string name="sunrise_">Sunrise:\u0020</string>
    <string name="sunset_">Sunset:\u0020</string>
    <string name="location_">Location:\u0020</string>
    <string name="save_location">Save Location</string>
    <string name="view_favorites">View Favorites</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location">Location</string>
    <string name="app_sunset_sunset_lookup">Sunrise SunSet lookup</string>
    <string name="sunrise_time">Sunrise Time</string>
    <string name="sunset_time">Sunset Time</string>
    <string name="invalid_latitude_or_longitude">Invalid latitude or longitude</string>
    <string name="location_saved_successfully">Location saved successfully</string>
    <string name="instruction_title">Help</string>
    <string name="instruction_body_welcome"><![CDATA[Welcome to the Sunrise & Sunset Lookup App! This application allows you to find the sunrise and sunset times for any location specified by its latitude and longitude.\n\n]]></string>
    <string name="instruction_body_how_to_use">How to Use:\n</string>
    <string name="instuction_body_tips">Tips:\n</string>
    <string name="instuction_body_ask_for_assistance">Should you need further assistance or encounter any issues, please feel free to contact our support team.</string>
    <string name="instuction_body_how_to_use_1">- Enter Latitude and Longitude: In the provided text fields, enter the latitude and longitude for which you wish to find sunrise and sunset times. Latitude and longitude should be in decimal format.\n</string>
...
